--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,15 @@ readme          = "Readme.md"
 description     = "Wraps `cargo install` for better local, non-conflicting installation"
 keywords        = ["cargo", "install"]
 categories      = ["development-tools::cargo-plugins"]
+exclude         = [".cargo", ".vscode", "scripts", "target", "test"]
 
 [badges]
 travis-ci       = { repository = "MaulingMonkey/cargo-local-install", branch = "master" }
+
+[features]
+default         = ["manifest"]
+manifest        = ["serde", "toml"]
+
+[dependencies]
+serde           = { version = "1",   optional = true, features = ["derive"] }
+toml            = { version = "0.5", optional = true }
