--- a/test/package-metadata/Cargo.toml
+++ b/test/package-metadata/Cargo.toml
@@ -2,7 +2,7 @@
 
 [package]
 name            = "test-package-metadata-cargo-local-install"
-version         = "0.0.0-git"
+version         = "0.0.0"
 publish         = false
 edition         = "2018"
 
