--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,5 +22,5 @@ default         = ["manifest"]
 manifest        = ["serde", "toml"]
 
 [dependencies]
-serde           = { version = "1",   optional = true, features = ["derive"] }
+serde           = { version = "1",   optional = true }
 toml            = { version = "0.5", optional = true }
