.vscode/tasks.json: "reveal": "always"

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,6 +5,7 @@
     "presentation": {
         "clear": true,
         "panel": "shared",
+        "reveal": "always"
         //"revealProblems": "onProblem",
     },
     "options": {
