--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 
 [package]
 name            = "cargo-local-install"
-version         = "0.0.0-git"
+version         = "0.1.12"
 authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
 repository      = "https://github.com/MaulingMonkey/cargo-local-install.git"
 documentation   = "https://docs.rs/cargo-local-install/"
